# ChangeLog for games-arcade/funnyboat
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-arcade/funnyboat/ChangeLog,v 1.13 2013/06/08 19:17:58 slyfox Exp $

  08 Jun 2013; Sergei Trofimovich <slyfox@gentoo.org> funnyboat-1.5.ebuild:
  Workaround python3 failure by requiring python2.

  29 Mar 2008; Santiago M. Mola <coldwind@gentoo.org> funnyboat-1.5.ebuild:
  amd64 stable

  22 Jul 2007; Michael Sterrett <mr_bones_@gentoo.org> funnyboat-1.5.ebuild:
  stable for x86

  24 Apr 2007; Timothy Redaelli <drizzt@gentoo.org> funnyboat-1.5.ebuild:
  Add ~x86-fbsd keyword.
  Thanks to Nathan Smith for reporting wrt bug #175779

  08 Apr 2007; Joseph Jezak <josejx@gentoo.org> funnyboat-1.5.ebuild:
  Marked ~ppc for bug #173426.

*funnyboat-1.5 (28 Mar 2007)

  28 Mar 2007; Tristan Heaven <nyhm@gentoo.org> +funnyboat-1.5.ebuild:
  Version bump

  18 Mar 2007; Michael Sterrett <mr_bones_@gentoo.org> funnyboat-1.4.ebuild:
  media is under MIT license; stable for x86

*funnyboat-1.4 (08 Feb 2007)

  08 Feb 2007; Tristan Heaven <nyhm@gentoo.org> +funnyboat-1.4.ebuild:
  Version bump

  10 Jul 2006; Michael Sterrett <mr_bones_@gentoo.org> funnyboat-1.3.ebuild:
  fix dep for bug #139701

*funnyboat-1.3 (07 Jul 2006)

  07 Jul 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +funnyboat-1.3.ebuild:
  version bump

  28 Jun 2006; Luis Medinas <metalgod@gentoo.org> funnyboat-1.2.ebuild:
  Added ~amd64 keyword. Closes bug #132496.

*funnyboat-1.2 (06 Jun 2006)

  06 Jun 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +funnyboat-1.2.ebuild:
  version bump

*funnyboat-1.1 (24 Apr 2006)

  24 Apr 2006; Michael Sterrett <mr_bones_@gentoo.org> +metadata.xml,
  +funnyboat-1.1.ebuild:
  initial commit - ebuild submitted by Cristiano Chiucchiolo and Alexandru Toma
  via bug #130333