@@ -2,13 +2,18 @@
 Hash: SHA256
 
 DIST funnyboat-1.5-src.zip 3839990 SHA256 de001d17f0e380df89bf5000392db75b385851a3cd200b3b87a8a9b66502f016 SHA512 7d38070e73825602d6f0a82e810fe8937fe919ce12f6e802ee25147ca1a2333c2b90821d92e20b8e071070505099bf9ec562e8c7b8cd8d241c3021b840e707cc WHIRLPOOL ad350d8d16276a830e9ac1d42a3ced1572c79260bf247d26235e0f67c2ff4324e8b332eb4f5d12e3e87a56c8e19bb90ef5fd49bee0dbb46efd96bddac55f6f31
+EBUILD funnyboat-1.5-r1.ebuild 1279 SHA256 652bba2782d2952820e5ad438dbd0b12935225ebb44ba3cc84ea0af883e77c14 SHA512 6bd1c3dae1664dacd6afa045c1acc0ba597abc5df718ccb64fd2af2e28609f57ae8500202f634b96bf7e4b6e3e3b1b81dd11d86aa7ed365efc60067552124b54 WHIRLPOOL 10c5ae6f70c4213046cde09280cfad0b48c4e0cc3d19d8dafff009eaf46c51f235ac5eabe782236c030c5cef751f4d9bcf1246aa2cb52bb2ae8888d889394f07
 EBUILD funnyboat-1.5.ebuild 928 SHA256 5d5d8fcc3b92c085be56073f964d6356793cf41763ea2267f8545f118e5e0750 SHA512 ff1bca8081cb23cb1ed1e305a8b1b875c4161fac7c2a4d91d8beb2c7a661b3ab4f8cdc51a48484679c0818662bfc9678df7e31fd856fa812b9dbb94f1b7eba00 WHIRLPOOL 1a50988a758309c1fc3772392c1ff0e5e0ee87617c73ce1971ce8c736ea688fb82b78f4c7ed2caa411fd705264e9d253ec1943e7b945a5628ab7fa725ea04c29
-MISC ChangeLog 1843 SHA256 50465d4a9114de2adc27538b53dbf288e603a66e9a6dfbbc254f154c38e92b35 SHA512 f363d698516ebbaaddf1a2da1ba1cad1f49de99d704830ee1530b7c2cf3461f059a4258752732ad125c86e54a7bcf616f218607c73343529dd5937302705fde5 WHIRLPOOL addb27664633e5c89c35380f8bbf30f37917d9f84119f6b452c5c9d45161a552170287fca91ece6dcf32ad90e93a8705ad11d84cb1ce35d5a24f058da7f332a3
+MISC ChangeLog 1983 SHA256 68e2f8af72ea0e9b21e9025d4619f690ef06db73edfc06b4d807d3de82026f0f SHA512 d12680557962e2f1b979c69f8ca86eaa4f0e9a37e8c4033e3f20920aa1f321c7eb9b4875425c874b1e32c94ed6fb4ac6394fe69fde15aa0c414be5cdd19d167f WHIRLPOOL f5cbeff60fd1c296de95ee8e472594dedc94f7948e7cbe7b51817041104645f30baaa1a481d8f19d6b18b745b42602bf4a9f6552db84c83f80c482687814debc
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlGzgwYACgkQcaHudmEf86pMSgCfQsM64tDYpT5JG9GcgRW4l2ka
-Ca0An3DMR03GqvsV8OvQQue2HloCcwr1
-=e2TY
+iQEcBAEBCAAGBQJRtDQxAAoJEFpvPKfnPDWzn0sH/2nZxcb/g1yj7nx+kgFYur63
+A8HSTIgu797sytylnXmFGl8TqzAfP/x7oGZj6MQMvnY+LeV+TUJAHBKkSNf4jzxb
+1N3PgHlIc3WUFyaZ0gSXoMOCH5ArG0xEGwS/ZqamNq1aB374JRehkiiYeoGRdtrE
+cFbpbdBF6z24RoEQUnnL8RPTZGMAb+zQxRGdrN+saxPcidjVrzPpiKwV0Yvo4sBg
+jUlDhl+1wRe6jvw65BRtp40e8hlqZ6P5UnOw52N2LYi27mIXHWPMVWNZiHqTZkTM
+vmeyrCBiAXA+cUXVasdmwzzqemdJeMGdj4GcaIIj0p7ZXbQQuavWQj+aGB9f8HU=
+=aja5
 -----END PGP SIGNATURE-----
