@@ -1,6 +1,11 @@
 # ChangeLog for games-arcade/funnyboat
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/funnyboat/ChangeLog,v 1.13 2013/06/08 19:17:58 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/funnyboat/ChangeLog,v 1.14 2013/06/09 07:52:13 hasufell Exp $
+
+*funnyboat-1.5-r1 (09 Jun 2013)
+
+  09 Jun 2013; Julian Ospald <hasufell@gentoo.org> +funnyboat-1.5-r1.ebuild:
+  port to python-single-r1
 
   08 Jun 2013; Sergei Trofimovich <slyfox@gentoo.org> funnyboat-1.5.ebuild:
   Workaround python3 failure by requiring python2.
